<resources>
    <string name="app_name">JuiceYourself</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_new">New</string>
    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_counter">Counter</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_splash">Splash</string>

    //Menu
    <string name="menu_home">Home</string>
    <string name="menu_search">Zoeken</string>
    <string name="menu_new">Toevoegen</string>
    <string name="menu_highscore">Top drinks</string>
    <string name="menu_counter">Teller</string>

    // new
    <string name="new_message">Nieuwe Cocktail</string>
    <string name="new_naam">Naam: </string>
    <string name="new_glas">Glas: </string>
    <string name="new_categorie">Categorie: </string>
    <string name="new_ingrediënt">Ingrediënt: </string>
    <string name="button_adding">Toevoegen </string>
    <string name="button_addfinal">Toevoegen </string>
    <string name="new_instructies">Instructies:</string>
    //Home screen
    <string name="welkom">Welkom bij Juice Yourself!</string>
    <string name="button_add">Toevoegen</string>
    <string name="button_top">Top</string>
    <string name="button_search">Zoeken</string>
    <string name="button_counter">Teller</string>
    <string name="menu_hulp">Help</string>

    //Search activity
    <string name="search_naam">Naam: </string>
    <string name="search_glas">Glas: </string>
    <string name="search_categorie">Categorie: </string>
    <string name="search_ingrediënt">Ingrediënt: </string>
    <string name="search_message">Zoek een cocktail op  </string>
    <string name="button_list">Lijst</string>
    <string name="button_searchResult">Zoeken</string>

    //help
    <string name="hulp_titel">Juice Yourself</string>
    <string name="hulp_text">Welkom bij de ultieme cocktail applicatie! Speciaal ontwikkeld om de beste cocktails in handbereik te brengen. Krijg een overzicht van de beste cocktails of zoek er één op basis van ingrediënten of glazen. Natuurlijk kan je ook bijhouden wat je favorieten zijn in je eigen top. Ook is er de cocktailteller waarin je kan bijhouden wat je limiet is!</string>
    <string name="hulp_ontwikkelaars">Informatiegegevens ontwikkelaars</string>
    <string name="ontwikkelaar1_naam">Naam: Thomas Dergent</string>
    <string name="ontwikkelaar1_mail">E-mail: r0699038@student.thomasmore.be</string>
    <string name="ontwikkelaar2_naam">Naam: Jonas Daeyaert</string>
    <string name="ontwikkelaar2_mail">E-mail: r0463164@student.thomasmore.be</string>

    //highscore

    <string name="highscore_titel">Top cocktails</string>

    //details
    <string name="details_titel">Details</string>
    <string name="cocktail">Cocktail</string>
    <string name="categorie">Categorie</string>
    <string name="glas">Glas</string>
    <string name="alcoholisch">Alcoholisch</string>
    <string name="instructies">Instructies</string>
    <string name="ingredient">Ingredient</string>







</resources>
