<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Hulp"
    tools:showIn="@layout/activity_hulp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:id="@+id/hulp_titel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textStyle="bold|italic"
            android:text="@string/hulp_titel"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/hulp_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/hulp_text"
            android:layout_below="@+id/hulp_titel"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/hulp_ontwikkelaars"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/hulp_ontwikkelaars"
            android:layout_below="@+id/hulp_text"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/ontwikkelaar1_naam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/ontwikkelaar1_naam"
            android:layout_below="@+id/hulp_ontwikkelaars"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/ontwikkelaar1_mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/ontwikkelaar1_mail"
            android:layout_below="@+id/ontwikkelaar1_naam"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/ontwikkelaar2_naam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/ontwikkelaar2_naam"
            android:layout_below="@+id/ontwikkelaar1_mail"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/ontwikkelaar2_mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:text="@string/ontwikkelaar2_mail"
            android:layout_below="@+id/ontwikkelaar2_naam"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>